renamed the ajax functions for read and added ajax data

--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,10 @@ ul li:nth-child(1) {
   height: 350px;
 }
 
+.card-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*# sourceMappingURL=style.css.map */
