--- a/css/main.scss
+++ b/css/main.scss
@@ -44,3 +44,9 @@ ul {
     width: 70%;
     height: 350px;
 }
+
+.card-header{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
